Minor artwork updates.

--- a/index.html
+++ b/index.html
@@ -118,6 +118,14 @@
     <p><em>(And other multi-page documents...)</em></p>
     <div id="pamphletsGoHere" onclick="clickHandler(event)">
         <div>
+        <img src="./Renders/generic-flyer/dl-wave_3mmbleeds_p1-auth_preview.jpg" alt="generic-flyer/dl-wave_3mmbleeds">
+        <p class="caption"><a href="./Renders/generic-flyer/dl-wave_3mmbleeds_p1-auth.png" download="dl-wave_3mmbleeds_p1">dl-wave_3mmbleeds</a></p>
+<p class="caption">Page:&nbsp;&nbsp;<a href="./Renders/generic-flyer/dl-wave_3mmbleeds_p1-auth.png" download="dl-wave_3mmbleeds_p1">1</a>&nbsp;&nbsp;<a href="./Renders/generic-flyer/dl-wave_3mmbleeds_p2-auth.png" download="dl-wave_3mmbleeds_p2">2</a>&nbsp;&nbsp;</p>      </div>
+<div>
+        <img src="./Renders/generic-flyer/generic-flyer_p1-auth_preview.jpg" alt="generic-flyer/generic-flyer">
+        <p class="caption"><a href="./Renders/generic-flyer/generic-flyer_p1-auth.png" download="generic-flyer_p1">generic-flyer</a></p>
+<p class="caption">Page:&nbsp;&nbsp;<a href="./Renders/generic-flyer/generic-flyer_p1-auth.png" download="generic-flyer_p1">1</a>&nbsp;&nbsp;<a href="./Renders/generic-flyer/generic-flyer_p2-auth.png" download="generic-flyer_p2">2</a>&nbsp;&nbsp;</p>      </div>
+<div>
         <img src="./Renders/press-release-posters/security-state-makes-australia-insecure/security-state-makes-australia-insecure_light_p1-auth_preview.jpg" alt="press-release-posters/security-state-makes-australia-insecure/security-state-makes-australia-insecure_light">
         <p class="caption"><a href="./Renders/press-release-posters/security-state-makes-australia-insecure/security-state-makes-australia-insecure_light_p1-auth.png" download="security-state-makes-australia-insecure_light_p1">security-state-makes-australia-insecure_light</a></p>
 <p class="caption">Page:&nbsp;&nbsp;<a href="./Renders/press-release-posters/security-state-makes-australia-insecure/security-state-makes-australia-insecure_light_p1-auth.png" download="security-state-makes-australia-insecure_light_p1">1</a>&nbsp;&nbsp;<a href="./Renders/press-release-posters/security-state-makes-australia-insecure/security-state-makes-australia-insecure_light_p2-auth.png" download="security-state-makes-australia-insecure_light_p2">2</a>&nbsp;&nbsp;</p>      </div>
@@ -136,12 +144,24 @@
         <p class="caption">sharing-turns-content-into-culture</p></a>
       </div>
 <div>
+        <a href="./Renders/Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture_no_url-auth.png" download="sharing-turns-content-into-culture_no_url"><img src="./Renders/Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture_no_url-auth_preview.jpg" alt="Pete-the-pirate/sharing-turns-content-into-culture/sharing-turns-content-into-culture_no_url">
+        <p class="caption">sharing-turns-content-into-culture_no_url</p></a>
+      </div>
+<div>
         <a href="./Renders/SocMed/2018/happy-new-year-auth.png" download="happy-new-year"><img src="./Renders/SocMed/2018/happy-new-year-auth_preview.jpg" alt="SocMed/2018/happy-new-year">
         <p class="caption">happy-new-year</p></a>
       </div>
 <div>
         <a href="./Renders/SocMed/2018/talk-like-a-pirate-auth.png" download="talk-like-a-pirate"><img src="./Renders/SocMed/2018/talk-like-a-pirate-auth_preview.jpg" alt="SocMed/2018/talk-like-a-pirate">
         <p class="caption">talk-like-a-pirate</p></a>
+      </div>
+<div>
+        <a href="./Renders/SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-blue-auth.png" download="this-year-voting-pirate-blue"><img src="./Renders/SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-blue-auth_preview.jpg" alt="SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-blue">
+        <p class="caption">this-year-voting-pirate-blue</p></a>
+      </div>
+<div>
+        <a href="./Renders/SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-stars-auth.png" download="this-year-voting-pirate-stars"><img src="./Renders/SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-stars-auth_preview.jpg" alt="SocMed/2019/this-year-voting-pirate/this-year-voting-pirate-stars">
+        <p class="caption">this-year-voting-pirate-stars</p></a>
       </div>
 <div>
         <a href="./Renders/SocMed/MEq-is-law/MEq-is-law-auth.png" download="MEq-is-law"><img src="./Renders/SocMed/MEq-is-law/MEq-is-law-auth_preview.jpg" alt="SocMed/MEq-is-law/MEq-is-law">
